@@ -3,25 +3,17 @@ package org.hl7.fhir.r5.terminologies.client;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.hl7.fhir.exceptions.TerminologyServiceException;
 import org.hl7.fhir.r5.context.ILoggingService;
-import org.hl7.fhir.r5.model.Bundle;
+import org.hl7.fhir.r5.model.*;
 import org.hl7.fhir.r5.model.Bundle.BundleEntryComponent;
-import org.hl7.fhir.r5.model.CodeSystem;
-import org.hl7.fhir.r5.model.Parameters;
 import org.hl7.fhir.r5.model.Parameters.ParametersParameterComponent;
-import org.hl7.fhir.r5.model.UriType;
-import org.hl7.fhir.r5.model.ValueSet;
 import org.hl7.fhir.r5.terminologies.CodeSystemUtilities;
 import org.hl7.fhir.r5.terminologies.ImplicitValueSets;
 import org.hl7.fhir.r5.terminologies.ValueSetUtilities;
@@ -30,14 +22,12 @@ import org.hl7.fhir.r5.terminologies.utilities.TerminologyCache;
 import org.hl7.fhir.r5.terminologies.utilities.TerminologyCache.SourcedCodeSystem;
 import org.hl7.fhir.r5.terminologies.utilities.TerminologyCache.SourcedValueSet;
 import org.hl7.fhir.r5.utils.UserDataNames;
-import org.hl7.fhir.utilities.CommaSeparatedStringBuilder;
-import org.hl7.fhir.utilities.MarkedToMoveToAdjunctPackage;
-import org.hl7.fhir.utilities.ToolingClientLogger;
-import org.hl7.fhir.utilities.Utilities;
+import org.hl7.fhir.utilities.*;
 import org.hl7.fhir.utilities.filesystem.ManagedFileAccess;
 import org.hl7.fhir.utilities.http.ManagedWebAccess;
 import org.hl7.fhir.utilities.json.model.JsonObject;
 import org.hl7.fhir.utilities.json.parser.JsonParser;
+import org.hl7.fhir.utilities.settings.FhirSettings;
 
 @MarkedToMoveToAdjunctPackage
 public class TerminologyClientManager {
@@ -45,17 +35,22 @@ public class TerminologyClientManager {
   private ImplicitValueSets implicitValueSets;
 
   public class ServerOptionList {
+    private String url;
     private List<String> authoritative = new ArrayList<String>();
     private List<String> candidates = new ArrayList<String>();
+    private String language; // the language this resolution was made for (null = no language; see Language Specific Claims in the tx ecosystem IG)
     
-    public ServerOptionList(String address) {
+    public ServerOptionList(String url, String address) {
+      this.url = url;
       candidates.add(address);
     }
     
-    public ServerOptionList() {
+    public ServerOptionList(String url) {
+      this.url = url;
     }
 
-    public ServerOptionList(List<String> auth, List<String> cand) {
+    public ServerOptionList(String url,List<String> auth, List<String> cand) {
+      this.url = url;
       authoritative.addAll(auth);
       candidates.addAll(cand);
     }
@@ -75,7 +70,7 @@ public class TerminologyClientManager {
 
     @Override
     public String toString() {
-      return "auth = " + CommaSeparatedStringBuilder.join("|", authoritative)+ ", candidates=" + CommaSeparatedStringBuilder.join("|", candidates);
+      return "["+url+(language == null ? "" : " in "+language)+ "]: authoritative = " + CommaSeparatedStringBuilder.join("|", authoritative)+ ", candidates=" + CommaSeparatedStringBuilder.join("|", candidates);
     }    
     
   }
@@ -144,9 +139,9 @@ public class TerminologyClientManager {
   private static final boolean IGNORE_TX_REGISTRY = false;
   
   private ITerminologyClientFactory factory;
-  private String cacheId;
   private List<TerminologyClientContext> serverList = new ArrayList<>(); // clients by server address
   private Map<String, TerminologyClientContext> serverMap = new HashMap<>(); // clients by server address
+  private Map<String, Boolean> serverSupportMap = new HashMap<>(); // clients by server address
   private Map<String, ServerOptionList> resMap = new HashMap<>(); // client resolution list
   private List<InternalLogEvent> internalLog = new ArrayList<>();
   protected Parameters expParameters;
@@ -164,20 +159,14 @@ public class TerminologyClientManager {
 
   private int ecosystemfailCount;
 
-  public TerminologyClientManager(ITerminologyClientFactory factory, String cacheId, ILoggingService logger) {
+  public TerminologyClientManager(ITerminologyClientFactory factory, ILoggingService logger) {
     super();
     this.factory = factory;
-    this.cacheId = cacheId;
     this.logger = logger;
     implicitValueSets = new ImplicitValueSets(null);
   }
-  
-  public String getCacheId() {
-    return cacheId; 
-  }
-  
+
   public void copy(TerminologyClientManager other) {
-    cacheId = other.cacheId;  
     serverList.addAll(other.serverList);
     serverMap.putAll(other.serverMap);
     resMap.putAll(other.resMap);
@@ -190,16 +179,31 @@ public class TerminologyClientManager {
 
 
   public TerminologyClientContext chooseServer(ValueSet vs, Set<String> systems, boolean expand) throws TerminologyServiceException {
+    return chooseServer(vs, systems, expand, null);
+  }
+
+  /**
+   * Choose a server for a set of code systems.
+   * 
+   * language is the language(s) of the request being routed, in Accept-Language syntax, or null.
+   * Language specific authoritative claims in the ecosystem registration are only considered when
+   * a language is passed, so it should only be provided when the operation being routed is language
+   * sensitive (an expansion where the display language matters, a validation that checks a display,
+   * a lookup that returns designations). The routing language and the language on the subsequent
+   * operation must agree, or the routing is meaningless.
+   */
+  public TerminologyClientContext chooseServer(ValueSet vs, Set<String> systems, boolean expand, String language) throws TerminologyServiceException {
     if (serverList.isEmpty()) {
       return null;
     }
-    if (systems.contains(UNRESOLVED_VALUESET) || systems.isEmpty()) {
-      return serverList.get(0);
+    if (systems.contains(UNRESOLVED_VALUESET) || systems.isEmpty() || !useEcosystem) {
+      return getMaster();
     }
+    language = effectiveLanguage(language, expand);
     
     List<ServerOptionList> choices = new ArrayList<>();
     for (String s : systems) {
-      choices.add(findServerForSystem(s, expand));
+      choices.add(findServerForSystem(s, language));
     }    
     
     // first we look for a server that's authoritative for all of them
@@ -213,7 +217,7 @@ public class TerminologyClientManager {
         }
         if (ok) {
           log(vs, s, systems, choices, "Found authoritative server "+s);
-          return findClient(s, systems, expand);
+          return findClientContext(s, systems, expand);
         }
       }
     }
@@ -229,10 +233,32 @@ public class TerminologyClientManager {
         }
         if (ok) {
           log(vs, s, systems, choices, "Found partially authoritative server "+s);
-          return findClient(s, systems, expand);
+          return findClientContext(s, systems, expand);
         }
       }
     }
+
+    for (String sys : systems) {
+      String uri = sys.contains("|") ? sys.substring(0, sys.indexOf("|")) : sys;
+      // this list is the list of code systems that have special handling on tx.fhir.org, and might not be resolved above.
+      // we don't want them to go to secondary servers (e.g. VSAC) by accident (they might go deliberately above)
+      if (Utilities.existsInList(uri, "http://snomed.info/sct") && systems.size() > 1) {
+        Set<String> sct = new HashSet<>();
+        sct.add("http://snomed.info/sct");
+        return chooseServer(vs, sct, expand, language);
+      }
+      if (Utilities.existsInList(uri, "http://unitsofmeasure.org", "http://loinc.org", "http://snomed.info/sct",
+        "http://www.nlm.nih.gov/research/umls/rxnorm", "http://hl7.org/fhir/sid/cvx", "urn:ietf:bcp:13", "urn:ietf:bcp:47",
+        "urn:ietf:rfc:3986", "http://www.ama-assn.org/go/cpt", "urn:oid:1.2.36.1.2001.1005.17", "urn:iso:std:iso:3166",
+        "http://varnomen.hgvs.org", "http://unstats.un.org/unsd/methods/m49/m49.htm", "urn:iso:std:iso:4217",
+        "http://hl7.org/fhir/sid/ndc", "http://fhir.ohdsi.org/CodeSystem/concepts", "http://fdasis.nlm.nih.gov", "https://www.usps.com/")) {
+        TerminologyClientContext pserver = findPrimaryServer(serverList);
+        log(vs, pserver.getAddress(), systems, choices, "Use primary server for "+uri);
+        return pserver;
+      }
+    }
+
+    choices.forEach(choice -> checkActuallySupports(choice));
 
     // now we look for a server that's a candidate for all of them
     for (ServerOptionList ol : choices) {
@@ -245,27 +271,13 @@ public class TerminologyClientManager {
         }
         if (ok) {
           log(vs, s, systems, choices, "Found candidate server " + s);
-          return findClient(s, systems, expand);
+          return findClientContext(s, systems, expand);
         }
       }
     }
-    
-    for (String sys : systems) {
-      String uri = sys.contains("|") ? sys.substring(0, sys.indexOf("|")) : sys;
-      // this list is the list of code systems that have special handling on tx.fhir.org, and might not be resolved above.
-      // we don't want them to go to secondary servers (e.g. VSAC) by accident (they might go deliberately above)
-      if (Utilities.existsInList(uri, "http://unitsofmeasure.org", "http://loinc.org", "http://snomed.info/sct",
-          "http://www.nlm.nih.gov/research/umls/rxnorm", "http://hl7.org/fhir/sid/cvx", "urn:ietf:bcp:13", "urn:ietf:bcp:47",
-          "urn:ietf:rfc:3986", "http://www.ama-assn.org/go/cpt", "urn:oid:1.2.36.1.2001.1005.17", "urn:iso:std:iso:3166", 
-          "http://varnomen.hgvs.org", "http://unstats.un.org/unsd/methods/m49/m49.htm", "urn:iso:std:iso:4217", 
-          "http://hl7.org/fhir/sid/ndc", "http://fhir.ohdsi.org/CodeSystem/concepts", "http://fdasis.nlm.nih.gov", "https://www.usps.com/")) {
-        log(vs, serverList.get(0).getAddress(), systems, choices, "Use primary server for "+uri);
-        return serverList.get(0);
-      }
-    }
 
 
-    // no agreement - take the one that is must authoritative
+    // no agreement - take the one that is most authoritative
     Map<String, Integer> counts = new HashMap<>();
     for (ServerOptionList ol : choices) {
       for (String s : ol.authoritative) {
@@ -279,7 +291,7 @@ public class TerminologyClientManager {
         .orElse(null);
     if (max != null) {
       log(vs, max, systems, choices, "Found most authoritative server "+max);
-      return findClient(max, systems, expand);
+      return findClientContext(max, systems, expand);
     }
 
     // no agreement? Then what we do depends     
@@ -294,14 +306,14 @@ public class TerminologyClientManager {
         } else {
           log(vs, el, systems, choices, "Handled by multiple servers. Using source @ '"+el+"'");
         }        
-        return findClient(el, systems, expand);
+        return findClientContext(el, systems, expand);
       } else {
         if (systems.size() == 1) {
           log(vs, serverList.get(0).getAddress(), systems, choices, "System not handled by any servers. Using primary server");
         } else {
           log(vs, serverList.get(0).getAddress(), systems, choices, "Systems handled by multiple servers. Using primary server");
         }
-        return findClient(serverList.get(0).getAddress(), systems, expand);
+        return findClientContext(serverList.get(0).getAddress(), systems, expand);
       }      
     } else {
       if (systems.size() == 1) {
@@ -310,28 +322,66 @@ public class TerminologyClientManager {
         log(vs, serverList.get(0).getAddress(), systems, choices, "Systems handled by multiple servers. Using primary server");
       }
       log(vs, serverList.get(0).getAddress(), systems, choices, "Fallback: primary server");
-      return findClient(serverList.get(0).getAddress(), systems, expand);
+      return findClientContext(serverList.get(0).getAddress(), systems, expand);
     }
   }
 
+  private void checkActuallySupports(ServerOptionList choice) {
+    for (String s : choice.candidates) {
+      if (isTxFhirOrg(s)) {
+        return;
+      }
+    }
+    choice.candidates.removeIf(server -> !isSupportedServer(server, choice.url));
+  }
+
+  private boolean isSupportedServer(String server, String url) {
+    if (isTxFhirOrg(server)) {
+      return true;
+    }
+    return checkCSAvailable(server, url);
+  }
+
+  private boolean isTxFhirOrg(String s) {
+    String server = s.replace("http://", "https://");
+    return Utilities.startsWithInList(server, "https://tx.fhir.org/", "https://tx-dev.fhir.org/");
+  }
+
+  private TerminologyClientContext findPrimaryServer(List<TerminologyClientContext> serverList) {
+    for (TerminologyClientContext sc : serverList) {
+      if (Utilities.existsInList(sc.getAddress(), FhirSettings.getTxFhirProduction(), FhirSettings.getTxFhirDevelopment(), FhirSettings.getTxFhirLocal())) {
+        return sc;
+      }
+    }
+    return serverList.get(0);
+  }
+
   public TerminologyClientContext chooseServer(String vs, boolean expand) throws TerminologyServiceException {
+    return chooseServer(vs, expand, null);
+  }
+
+  public TerminologyClientContext chooseServer(String vs, boolean expand, String language) throws TerminologyServiceException {
     if (serverList.isEmpty()) {
       return null;
     }
     if (IGNORE_TX_REGISTRY || !useEcosystem) {
-      return findClient(getMasterClient().getAddress(), null, expand);
+      return findClientContext(getMasterClient().getAddress(), null, expand);
     }
+    language = effectiveLanguage(language, expand);
     String request = Utilities.pathURL(monitorServiceURL, "resolve?fhirVersion="+factory.getVersion()+"&valueSet="+Utilities.URLEncode(vs));
     if (usage != null) {
       request = request + "&usage="+usage;
     } 
+    if (language != null) {
+      request = request + "&language="+Utilities.URLEncode(language);
+    }
     try {
-      JsonObject json = JsonParser.parseObjectFromUrl(request);
+      JsonObject json = fetchRegistryJson(request);
       for (JsonObject item : json.getJsonObjects("authoritative")) {
-        return findClient(item.asString("url"), null, expand);
+        return findClientContext(item.asString("url"), null, expand);
       }
       for (JsonObject item : json.getJsonObjects("candidates")) {
-        return findClient(item.asString("url"), null, expand);
+        return findClientContext(item.asString("url"), null, expand);
       }
     } catch (Exception e) {
       String msg = "Error resolving valueSet "+vs+": "+e.getMessage();
@@ -350,12 +400,12 @@ public class TerminologyClientManager {
     internalLog.add(new InternalLogEvent(message, server, svs, sys, sch));
   }
 
-  private TerminologyClientContext findClient(String server, Set<String> systems, boolean expand) {
+  private TerminologyClientContext findClientContext(String server, Set<String> systems, boolean expand) {
     server = ManagedWebAccess.makeSecureRef(server);
     TerminologyClientContext client = serverMap.get(server);
     if (client == null) {
       try {
-        client = new TerminologyClientContext(factory.makeClient("id"+(serverList.size()+1), server, getMasterClient().getUserAgent(), getMasterClient().getLogger()), cache, cacheId, false);
+        client = new TerminologyClientContext(factory.makeClient("id"+(serverList.size()+1), server, getMasterClient().getUserAgent(), getMasterClient().getLogger()), cache, false, logger);
       } catch (Exception e) {
         throw new TerminologyServiceException("Error accessing "+server+" for "+CommaSeparatedStringBuilder.join(",", systems)+": "+e.getMessage(), e);
       }
@@ -367,23 +417,36 @@ public class TerminologyClientManager {
     return client;
   }
 
-  private ServerOptionList findServerForSystem(String s, boolean expand) throws TerminologyServiceException {
-    ServerOptionList serverList = resMap.get(s);
+  /**
+   * All access to the ecosystem coordination server (tx-reg) goes through here, so that
+   * tests can supply their own registry responses without any network access
+   * (see TerminologyClientManagerLanguageTest)
+   */
+  protected JsonObject fetchRegistryJson(String request) throws IOException, org.hl7.fhir.utilities.json.JsonException {
+    return JsonParser.parseObjectFromUrl(request);
+  }
+
+  private ServerOptionList findServerForSystem(String s, String language) throws TerminologyServiceException {
+    // resolutions are language specific - the server chosen for German requests is not the
+    // right resolution for the same code system in English - so resolutions are remembered
+    // (and persisted) against both the code system and the language they were made for
+    String key = language == null ? s : s+" in "+language;
+    ServerOptionList serverList = resMap.get(key);
     if (serverList == null) {
-      serverList = decideWhichServer(s);
+      serverList = decideWhichServer(s, language);
       // testing support
       try {
         serverList.replace("tx.fhir.org", host());
       } catch (MalformedURLException e) {
       }
-      // resMap.put(s, serverList);
+      resMap.put(key, serverList);
       save();
     }
     return serverList;
   }
 
   private String host() throws MalformedURLException {
-    URL url = new URL(getMasterClient().getAddress());
+    URL url = URI.create(getMasterClient().getAddress()).toURL();
     if (url.getPort() > 0) {
       return url.getHost()+":"+url.getPort();
     } else {
@@ -391,9 +454,31 @@ public class TerminologyClientManager {
     }
   }
 
-  private ServerOptionList decideWhichServer(String url) {
+  /**
+   * The language to use for routing: whatever the caller passed, if anything, else (for
+   * expansions) whatever displayLanguage is fixed in the expansion parameters - the same
+   * approach as the version handling in decideWhichServer()
+   */
+  private String effectiveLanguage(String language, boolean expand) {
+    if (language != null) {
+      language = language.trim();
+      if (language.isEmpty()) {
+        language = null;
+      }
+    }
+    if (language == null && expand && expParameters != null) {
+      for (ParametersParameterComponent p : expParameters.getParameter()) {
+        if ("displayLanguage".equals(p.getName()) && p.hasValuePrimitive()) {
+          language = p.getValue().primitiveValue();
+        }
+      }
+    }
+    return language;
+  }
+
+  private ServerOptionList decideWhichServer(String url, String language) {
     if (IGNORE_TX_REGISTRY || !useEcosystem) {
-      return new ServerOptionList(getMasterClient().getAddress());
+      return new ServerOptionList(url, getMasterClient().getAddress());
     }
     if (expParameters != null) {
       if (!url.contains("|")) {
@@ -416,11 +501,15 @@ public class TerminologyClientManager {
     if (usage != null) {
       request = request + "&usage="+usage;
     } 
+    if (language != null) {
+      request = request + "&language="+Utilities.URLEncode(language);
+    }
     try {
-      ServerOptionList ret = new ServerOptionList();
-      JsonObject json = JsonParser.parseObjectFromUrl(request);
+      ServerOptionList ret = new ServerOptionList(url);
+      ret.language = language;
+      JsonObject json = fetchRegistryJson(request);
       for (JsonObject item : json.getJsonObjects("authoritative")) {
-        ret.authoritative.add(item.asString("url"));
+          ret.authoritative.add(item.asString("url"));
       }
       for (JsonObject item : json.getJsonObjects("candidates")) {
         ret.candidates.add(item.asString("url"));
@@ -433,8 +522,44 @@ public class TerminologyClientManager {
       }
       logger.logDebugMessage(ILoggingService.LogCategory.TX, ExceptionUtils.getStackTrace(e));
     }
-    return new ServerOptionList( getMasterClient().getAddress());
-    
+    return new ServerOptionList(url, getMasterClient().getAddress());
+  }
+
+  private boolean checkCSAvailable(String server, String canonical) {
+    if (isTxFhirOrg(server)) {
+      return true;
+    }
+    String key = server+"^"+canonical;
+    if (serverSupportMap.containsKey(key)) {
+      return serverSupportMap.get(key);
+    }
+    try {
+      var client = findClientContext(server, null, false);
+      Bundle bnd = client.getClient().search("CodeSystem",
+        canonical.contains("|")
+          ? "?url=" + Utilities.escapeUrl(canonical.substring(0, canonical.indexOf("|")))+"&version="+Utilities.escapeUrl(canonical.substring(canonical.indexOf("|")+1))
+          : "?url=" + Utilities.escapeUrl(canonical));
+      if (bnd.getEntry().size() == 1 && bnd.getEntry().get(0).hasResource() && bnd.getEntry().get(0).getResource() instanceof CodeSystem) {
+        CodeSystem cs = (CodeSystem) bnd.getEntry().get(0).getResource();
+        boolean ok = cs.getContent() == Enumerations.CodeSystemContentMode.COMPLETE || cs.getContent() == Enumerations.CodeSystemContentMode.FRAGMENT;
+        serverSupportMap.put(key, ok);
+        return ok;
+      }
+      if (canonical.contains("|")) {
+        bnd = client.getClient().search("CodeSystem",
+          "?url=" + Utilities.escapeUrl(canonical.substring(0, canonical.indexOf("|"))));
+        if (bnd.getEntry().size() == 1 && bnd.getEntry().get(0).hasResource() && bnd.getEntry().get(0).getResource() instanceof CodeSystem) {
+          CodeSystem cs = (CodeSystem) bnd.getEntry().get(0).getResource();
+          boolean ok = cs.getContent() == Enumerations.CodeSystemContentMode.COMPLETE || cs.getContent() == Enumerations.CodeSystemContentMode.FRAGMENT;
+          serverSupportMap.put(key, ok);
+          return ok;
+        }
+      }
+    } catch (Exception e) {
+      // nothing
+    }
+    serverSupportMap.put(key, false);
+    return false;
   }
 
   private boolean hasMessage(String msg) {
@@ -448,6 +573,17 @@ public class TerminologyClientManager {
 
   public List<TerminologyClientContext> serverList() {
     return serverList;
+  }
+
+  /**
+   * Shut down every server context, releasing owned server caches (best-effort),
+   * e.g. on worker context unload. Idempotent; the contexts must not be used for
+   * further requests afterwards.
+   */
+  public void shutdown() {
+    for (TerminologyClientContext server : serverList) {
+      server.shutdown();
+    }
   }
   
   public boolean hasClient() {
@@ -478,7 +614,7 @@ public class TerminologyClientManager {
 
   public TerminologyClientContext setMasterClient(ITerminologyClient client, boolean useEcosystem) throws IOException {
     this.useEcosystem = useEcosystem;
-    TerminologyClientContext terminologyClientContext = new TerminologyClientContext(client, cache, cacheId,true);
+    TerminologyClientContext terminologyClientContext = new TerminologyClientContext(client, cache, true, logger);
     serverList.clear();
     serverList.add(terminologyClientContext);
     serverMap.put(client.getAddress(), terminologyClientContext);
@@ -517,10 +653,15 @@ public class TerminologyClientManager {
         if (cacheFile.exists()) {
           JsonObject json = JsonParser.parseObject(cacheFile);
           for (JsonObject pair : json.getJsonObjects("systems")) {
-            if (pair.has("server")) {
-              resMap.put(pair.asString("system"), new ServerOptionList(pair.asString("server")));
-            } else {
-              resMap.put(pair.asString("system"), new ServerOptionList(pair.getStrings("authoritative"), pair.getStrings("candidates")));
+            String url = pair.asString("url");
+            if (url != null) {
+              if (pair.has("server")) {
+                resMap.put(pair.asString("system"), new ServerOptionList(url, pair.asString("server")));
+              } else {
+                ServerOptionList sol = new ServerOptionList(url, pair.getStrings("authoritative"), pair.getStrings("candidates"));
+                sol.language = pair.asString("language");
+                resMap.put(pair.asString("system"), sol);
+              }
             }
           }
         }
@@ -537,8 +678,13 @@ public class TerminologyClientManager {
         JsonObject si = new JsonObject();
         json.forceArray("systems").add(si);
         si.add("system", s);
-        si.add("authoritative", resMap.get(s).authoritative);
-        si.add("candidates", resMap.get(s).candidates);
+        ServerOptionList sol = resMap.get(s);
+        si.add("url", sol.url);
+        if (sol.language != null) {
+          si.add("language", sol.language);
+        }
+        si.add("authoritative", sol.authoritative);
+        si.add("candidates", sol.candidates);
       }
       try {
         JsonParser.compose(json, cacheFile, true);
@@ -612,7 +758,7 @@ public class TerminologyClientManager {
           if (usage != null) {
             request = request + "&usage="+usage;
           }
-          JsonObject json = JsonParser.parseObjectFromUrl(request);
+          JsonObject json = fetchRegistryJson(request);
           for (JsonObject item : json.getJsonObjects("authoritative")) {
             if (server == null) {
               server = item.asString("url");
@@ -649,7 +795,7 @@ public class TerminologyClientManager {
       TerminologyClientContext client = serverMap.get(server);
       if (client == null) {
         try {
-          client = new TerminologyClientContext(factory.makeClient("id"+(serverList.size()+1), ManagedWebAccess.makeSecureRef(server), getMasterClient().getUserAgent(), getMasterClient().getLogger()), cache, cacheId, false);
+          client = new TerminologyClientContext(factory.makeClient("id"+(serverList.size()+1), ManagedWebAccess.makeSecureRef(server), getMasterClient().getUserAgent(), getMasterClient().getLogger()), cache, false, logger);
         } catch (URISyntaxException | IOException e) {
           throw new TerminologyServiceException(e);
         }
@@ -720,7 +866,7 @@ public class TerminologyClientManager {
     }
     String server = null;
     try {
-      JsonObject json = JsonParser.parseObjectFromUrl(request);
+      JsonObject json = fetchRegistryJson(request);
       for (JsonObject item : json.getJsonObjects("authoritative")) {
         if (server == null) {
           server = item.asString("url");
@@ -743,7 +889,7 @@ public class TerminologyClientManager {
       TerminologyClientContext client = serverMap.get(server);
       if (client == null) {
         try {
-          client = new TerminologyClientContext(factory.makeClient("id"+(serverList.size()+1), ManagedWebAccess.makeSecureRef(server), getMasterClient().getUserAgent(), getMasterClient().getLogger()), cache, cacheId, false);
+          client = new TerminologyClientContext(factory.makeClient("id"+(serverList.size()+1), ManagedWebAccess.makeSecureRef(server), getMasterClient().getUserAgent(), getMasterClient().getLogger()), cache, false, logger);
         } catch (URISyntaxException | IOException e) {
           throw new TerminologyServiceException("Error accessing "+server+" for "+canonical+": "+e.getMessage(), e);
         }
@@ -763,7 +909,10 @@ public class TerminologyClientManager {
         List<CodeSystem> cslist = new ArrayList<>();
         for (BundleEntryComponent be : bnd.getEntry()) {
           if (be.hasResource() && be.getResource() instanceof CodeSystem) {
-            cslist.add((CodeSystem) be.getResource());
+            CodeSystem cs = (CodeSystem) be.getResource();
+            if (canonical.equals(cs.getUrl())) {
+              cslist.add(cs);
+            }
           }
         }
         Collections.sort(cslist, new CodeSystemUtilities.CodeSystemSorter());
